libcdi/src/cdi.h

int     vlistDelAtt(int vlistID, int varID, const char *name);
/*      vlistDefAttInt: Define an integer attribute */
int     vlistDefAttInt(int vlistID, int varID, const char *name, int type, int len, const int *ip_vec);
/*      vlistDefAttFlt: Define a floating point attribute */
int     vlistDefAttFlt(int vlistID, int varID, const char *name, int type, int len, const double *dp_vec);
/*      vlistDefAttTxt: Define a text attribute */
int     vlistDefAttTxt(int vlistID, int varID, const char *name, int len, const char *tp_cbuf);
/*      vlistInqAttInt: Get the value(s) of an integer attribute */
int     vlistInqAttInt(int vlistID, int varID, const char *name, int mlen, int *ip_vec);
/*      vlistInqAttFlt: Get the value(s) of a floating point attribute */
int     vlistInqAttFlt(int vlistID, int varID, const char *name, int mlen, double *dp_vec);
/*      vlistInqAttTxt: Get the value(s) of a text attribute */
int     vlistInqAttTxt(int vlistID, int varID, const char *name, int mlen, char *tp_cbuf);
/* GRID routines */

void    gridName(int gridtype, char *gridname);
void    gridCompress(int gridID);
void    gridDefMaskGME(int gridID, const int *mask_vec);
int     gridInqMaskGME(int gridID, int *mask_vec);
void    gridDefMask(int gridID, const int *mask_vec);
int     gridInqMask(int gridID, int *mask_vec);
void    gridPrint(int gridID, int index, int opt);
/*      gridCreate: Create a horizontal Grid */
int     gridCreate(int gridtype, int size);
/*      gridDestroy: Destroy a horizontal Grid */
void    gridDestroy(int gridID);
/*      gridDuplicate: Duplicate a Grid */
int     gridDuplicate(int gridID);
/*      gridInqType: Get the type of a Grid */
int     gridInqType(int gridID);
/*      gridInqSize: Get the size of a Grid */
int     gridInqSize(int gridID);
/*      gridDefXsize: Define the size of a X-axis */
void    gridDefXsize(int gridID, int xsize);
/*      gridInqXsize: Get the size of a X-axis */
int     gridInqXsize(int gridID);
/*      gridDefYsize: Define the size of a Y-axis */
void    gridDefYsize(int gridID, int ysize);
/*      gridInqYsize: Get the size of a Y-axis */
int     gridInqYsize(int gridID);
/*      gridDefNP: Define the number of parallels between a pole and the equator */
void    gridDefNP(int gridID, int np);
/*      gridInqNP: Get the number of parallels between a pole and the equator */
int     gridInqNP(int gridID);
/*      gridDefXvals: Define the values of a X-axis */
void    gridDefXvals(int gridID, const double *xvals_vec);
/*      gridInqXvals: Get all values of a X-axis */
int     gridInqXvals(int gridID, double *xvals_vec);
/*      gridDefYvals: Define the values of a Y-axis */
void    gridDefYvals(int gridID, const double *yvals_vec);
/*      gridInqYvals: Get all values of a Y-axis */
int     gridInqYvals(int gridID, double *yvals_vec);
/*      gridDefXname: Define the name of a X-axis */
void    gridDefXname(int gridID, const char *xname);
/*      gridInqXname: Get the name of a X-axis */
void    gridInqXname(int gridID, char *xname);
/*      gridDefXlongname: Define the longname of a X-axis  */
void    gridDefXlongname(int gridID, const char *xlongname);
/*      gridInqXlongname: Get the longname of a X-axis */
void    gridInqXlongname(int gridID, char *xlongname);
/*      gridDefXunits: Define the units of a X-axis */
void    gridDefXunits(int gridID, const char *xunits);
/*      gridInqXunits: Get the units of a X-axis */
void    gridInqXunits(int gridID, char *xunits);
/*      gridDefYname: Define the name of a Y-axis */
void    gridDefYname(int gridID, const char *yname);
/*      gridInqYname: Get the name of a Y-axis */
void    gridInqYname(int gridID, char *yname);
/*      gridDefYlongname: Define the longname of a Y-axis */
void    gridDefYlongname(int gridID, const char *ylongname);