libcdi/src/mo_cdi.f90

          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int) :: vlistDelAtt
        end function vlistDelAtt
      end interface
      interface
        function vlistDefAttInt(vlistID,varID,name,type,len,ip_vec) bind(c,name='vlistDefAttInt')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: type
          integer(kind=c_int), value :: len
          integer(kind=c_int), intent(in),dimension(*) :: ip_vec
          integer(kind=c_int) :: vlistDefAttInt
        end function vlistDefAttInt
      end interface
      interface
        function vlistDefAttFlt(vlistID,varID,name,type,len,dp_vec) bind(c,name='vlistDefAttFlt')
          import :: c_int,c_char,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: type
          integer(kind=c_int), value :: len
          real(kind=c_double), intent(in),dimension(*) :: dp_vec
          integer(kind=c_int) :: vlistDefAttFlt
        end function vlistDefAttFlt
      end interface
      interface
        function vlistDefAttTxt(vlistID,varID,name,len,tp_cbuf) bind(c,name='vlistDefAttTxt')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: len
          character(kind=c_char), dimension(*) :: tp_cbuf
          integer(kind=c_int) :: vlistDefAttTxt
        end function vlistDefAttTxt
      end interface
      interface
        function vlistInqAttInt(vlistID,varID,name,mlen,ip_vec) bind(c,name='vlistInqAttInt')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: mlen
          integer(kind=c_int), intent(out),dimension(*) :: ip_vec
          integer(kind=c_int) :: vlistInqAttInt
        end function vlistInqAttInt
      end interface
      interface
        function vlistInqAttFlt(vlistID,varID,name,mlen,dp_vec) bind(c,name='vlistInqAttFlt')
          import :: c_int,c_char,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: mlen
          real(kind=c_double), intent(out),dimension(*) :: dp_vec
          integer(kind=c_int) :: vlistInqAttFlt
        end function vlistInqAttFlt
      end interface
      interface
        function vlistInqAttTxt(vlistID,varID,name,mlen,tp_cbuf) bind(c,name='vlistInqAttTxt')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: mlen
          character(kind=c_char), dimension(*) :: tp_cbuf
          integer(kind=c_int) :: vlistInqAttTxt
        end function vlistInqAttTxt
      end interface
      interface
        subroutine gridName(gridtype,gridnamev) bind(c,name='gridName')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridtype
          character(kind=c_char), dimension(*) :: gridnamev
        end subroutine gridName
      end interface
      interface
        subroutine gridCompress(gridID) bind(c,name='gridCompress')
          import :: c_int
          integer(kind=c_int), value :: gridID
        end subroutine gridCompress
      end interface
      interface
        subroutine gridDefMaskGME(gridID,mask_vec) bind(c,name='gridDefMaskGME')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), intent(in),dimension(*) :: mask_vec
        end subroutine gridDefMaskGME
      end interface
      interface
        function gridInqMaskGME(gridID,mask_vec) bind(c,name='gridInqMaskGME')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), intent(out),dimension(*) :: mask_vec
          integer(kind=c_int) :: gridInqMaskGME
        end function gridInqMaskGME
      end interface
      interface
        subroutine gridDefMask(gridID,mask_vec) bind(c,name='gridDefMask')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), intent(in),dimension(*) :: mask_vec
        end subroutine gridDefMask
      end interface
      interface
        function gridInqMask(gridID,mask_vec) bind(c,name='gridInqMask')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), intent(out),dimension(*) :: mask_vec
          integer(kind=c_int) :: gridInqMask
        end function gridInqMask
      end interface
      interface
        subroutine gridPrint(gridID,opt) bind(c,name='gridPrint')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: opt
        end subroutine gridPrint
      end interface
      interface
        function gridCreate(gridtype,size) bind(c,name='gridCreate')
          import :: c_int
          integer(kind=c_int), value :: gridtype
          integer(kind=c_int), value :: size
          integer(kind=c_int) :: gridCreate
        end function gridCreate
      end interface
      interface
        subroutine gridDestroy(gridID) bind(c,name='gridDestroy')
          import :: c_int
          integer(kind=c_int), value :: gridID
        end subroutine gridDestroy
      end interface
      interface
        function gridDuplicate(gridID) bind(c,name='gridDuplicate')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridDuplicate
        end function gridDuplicate
      end interface
      interface
        function gridInqType(gridID) bind(c,name='gridInqType')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqType
        end function gridInqType
      end interface
      interface
        function gridInqSize(gridID) bind(c,name='gridInqSize')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqSize
        end function gridInqSize
      end interface
      interface
        subroutine gridDefXsize(gridID,xsize) bind(c,name='gridDefXsize')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: xsize
        end subroutine gridDefXsize
      end interface
      interface
        function gridInqXsize(gridID) bind(c,name='gridInqXsize')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqXsize
        end function gridInqXsize
      end interface
      interface
        subroutine gridDefYsize(gridID,ysize) bind(c,name='gridDefYsize')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: ysize
        end subroutine gridDefYsize
      end interface
      interface
        function gridInqYsize(gridID) bind(c,name='gridInqYsize')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqYsize
        end function gridInqYsize
      end interface
      interface
        subroutine gridDefNP(gridID,np) bind(c,name='gridDefNP')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: np
        end subroutine gridDefNP
      end interface
      interface
        function gridInqNP(gridID) bind(c,name='gridInqNP')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqNP
        end function gridInqNP
      end interface
      interface
        subroutine gridDefXvals(gridID,xvals_vec) bind(c,name='gridDefXvals')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(in),dimension(*) :: xvals_vec
        end subroutine gridDefXvals
      end interface
      interface
        function gridInqXvals(gridID,xvals_vec) bind(c,name='gridInqXvals')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out),dimension(*) :: xvals_vec
          integer(kind=c_int) :: gridInqXvals
        end function gridInqXvals
      end interface
      interface
        subroutine gridDefYvals(gridID,yvals_vec) bind(c,name='gridDefYvals')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(in),dimension(*) :: yvals_vec
        end subroutine gridDefYvals
      end interface
      interface
        function gridInqYvals(gridID,yvals_vec) bind(c,name='gridInqYvals')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out),dimension(*) :: yvals_vec
          integer(kind=c_int) :: gridInqYvals
        end function gridInqYvals
      end interface
      interface
        subroutine gridDefXname(gridID,xname) bind(c,name='gridDefXname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xname
        end subroutine gridDefXname
      end interface
      interface
        subroutine gridInqXname(gridID,xname) bind(c,name='gridInqXname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xname
        end subroutine gridInqXname
      end interface
      interface
        subroutine gridDefXlongname(gridID,xlongname) bind(c,name='gridDefXlongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xlongname
        end subroutine gridDefXlongname
      end interface
      interface
        subroutine gridInqXlongname(gridID,xlongname) bind(c,name='gridInqXlongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xlongname
        end subroutine gridInqXlongname
      end interface
      interface
        subroutine gridDefXunits(gridID,xunits) bind(c,name='gridDefXunits')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xunits
        end subroutine gridDefXunits
      end interface
      interface
        subroutine gridInqXunits(gridID,xunits) bind(c,name='gridInqXunits')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xunits
        end subroutine gridInqXunits
      end interface
      interface
        subroutine gridDefYname(gridID,yname) bind(c,name='gridDefYname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: yname
        end subroutine gridDefYname
      end interface
      interface
        subroutine gridInqYname(gridID,yname) bind(c,name='gridInqYname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: yname
        end subroutine gridInqYname
      end interface
      interface
        subroutine gridDefYlongname(gridID,ylongname) bind(c,name='gridDefYlongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: ylongname
        end subroutine gridDefYlongname
      end interface
